// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> renders correctly if change tab 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabIconStyled-bYWiJR eQkcDH"
              selected={true}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled-kyChmy HdHAs"
            >
              Test 1
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabIconStyled-bYWiJR eMTSwD"
              selected={false}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled-kyChmy HdHAs"
            >
              Test 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if change tab 2`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabIconStyled-bYWiJR eMTSwD"
              selected={false}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled-kyChmy HdHAs"
            >
              Test 1
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabIconStyled-bYWiJR eQkcDH"
              selected={true}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled-kyChmy HdHAs"
            >
              Test 2
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop  1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <a
        href="test1"
        onClick={[Function]}
      >
        <div
          className="TabStyled-csMJzZ gsAzPq"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled-enEVMS jZgudN"
          >
            <div
              className="TabContentStyled-cGqNqA khIZPl"
            >
              <div
                className="TabTextStyled-kyChmy jvIQbK"
              >
                Test1
              </div>
            </div>
          </div>
        </div>
      </a>
      <a
        href="test2"
        onClick={[Function]}
      >
        <div
          className="TabStyled-csMJzZ fFefNP"
          onClick={[Function]}
          selected={false}
        >
          <div
            className="TabContentWrapperStyled-enEVMS jZgudN"
          >
            <div
              className="TabContentStyled-cGqNqA khIZPl"
            >
              <div
                className="TabTextStyled-kyChmy jvIQbK"
              >
                Test2
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop icon 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabIconStyled-bYWiJR eQkcDH"
              selected={true}
            >
              <span
                className="fa fa-anchor IconFontAwesomeStyled-dGckvS ccJleE"
                color=""
                onClick={[Function]}
                rotate={0}
                size="normal"
              />
            </div>
            <div
              className="TabTextStyled-kyChmy HdHAs"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop linkComponent passed 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <a
        href="/"
        onClick={[Function]}
      >
        <div
          className="TabStyled-csMJzZ gsAzPq"
          onClick={[Function]}
          selected={true}
        >
          <div
            className="TabContentWrapperStyled-enEVMS jZgudN"
          >
            <div
              className="TabContentStyled-cGqNqA khIZPl"
            >
              <div
                className="TabTextStyled-kyChmy jvIQbK"
              >
                Test
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set 1 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop selected set after render 2`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
      <div
        className="TabStyled-csMJzZ fFefNP"
        onClick={[Function]}
        selected={false}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          >
            <div
              className="TabTextStyled-kyChmy jvIQbK"
            >
              Test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly if prop text is empty 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    >
      <div
        className="TabStyled-csMJzZ gsAzPq"
        onClick={[Function]}
        selected={true}
      >
        <div
          className="TabContentWrapperStyled-enEVMS jZgudN"
        >
          <div
            className="TabContentStyled-cGqNqA khIZPl"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs/> renders correctly with default props 1`] = `
<div
  className="TabsWrapperStyled-gHoWnV dZhZpG"
>
  <div
    className="TabsContentWrapperStyled-dkXjGq gvyVcA"
  >
    <div
      className="TabsListStyled-dpAKRd fQTQyC"
    />
  </div>
</div>
`;
